--- a/polysleep/Resources/Localizations/Analytics.xcstrings
+++ b/polysleep/Resources/Localizations/Analytics.xcstrings
@@ -87,6 +87,23 @@
         }
       }
     },
+    "analytics.bestWorstDays.hours" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%.1f hours"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%.1f saat"
+          }
+        }
+      }
+    },
     "analytics.chart.dayLabel" : {
       "extractionState" : "stale",
       "localizations" : {
