Profil ekranında kullanıcı avatarı için fotoğraf kırpma işlevselliği eklendi. Kullanıcı arayüzü güncellemeleri ile birlikte yeni talimat metinleri ve yerelleştirme içerikleri eklendi. Kırpma alanı için yeni bir düzen ve etkileşim özellikleri geliştirildi.

--- a/polysleep/Resources/Localizations/Profile.xcstrings
+++ b/polysleep/Resources/Localizations/Profile.xcstrings
@@ -3502,6 +3502,57 @@
           }
         }
       }
+    },
+    "profile.avatar.crop.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Crop Photo"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Fotoğrafı Kırp"
+          }
+        }
+      }
+    },
+    "profile.avatar.crop.done" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Done"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tamam"
+          }
+        }
+      }
+    },
+    "profile.avatar.crop.instruction" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Move and scale your photo to fit in the circle"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Fotoğrafınızı çembere sığacak şekilde hareket ettirin ve ölçeklendirin"
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
