Alarm sistemine yeni özellikler eklendi: akıllı alarm, özelleştirilebilir alarm sesleri, erteleme işlevi ve bildirim izinleri için yedek uyarılar. Ayrıca, kullanıcı arayüzü güncellemeleri ve yerelleştirme içerikleri ile birlikte alarm ayarları için yeni bir görünüm oluşturuldu. README dosyası güncellendi ve yeni buton stilleri eklendi.

--- a/polysleep/Resources/Localizations/MainScreen.xcstrings
+++ b/polysleep/Resources/Localizations/MainScreen.xcstrings
@@ -563,6 +563,40 @@
         }
       }
     },
+    "mainScreen.dailyTip.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Daily Tip"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Günlük İpucu"
+          }
+        }
+      }
+    },
+    "mainScreen.editing.mode" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Editing"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Düzenleme"
+          }
+        }
+      }
+    },
     "mainScreen.error.generic" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1022,6 +1056,57 @@
         }
       }
     },
+    "mainScreen.sleepChart.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sleep Chart"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uyku Grafiği"
+          }
+        }
+      }
+    },
+    "mainScreen.sleepQuality.subtitle" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "How was your sleep quality?"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uyku kaliteniz nasıldı?"
+          }
+        }
+      }
+    },
+    "mainScreen.sleepQuality.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Rate Your Sleep"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uykunuzu Değerlendirin"
+          }
+        }
+      }
+    },
     "mainScreen.sleepTimeIcon" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -1052,23 +1137,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Uyku saatine %@s %@dk kaldı"
-          }
-        }
-      }
-    },
-    "mainScreen.sleepTimeRemainingMinutes" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "%@min until sleep time"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Uyku saatine %@dk kaldı"
           }
         }
       }
@@ -1124,6 +1192,23 @@
         }
       }
     },
+    "mainScreen.sleepTimeRemainingMinutes" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@min until sleep time"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uyku saatine %@dk kaldı"
+          }
+        }
+      }
+    },
     "mainScreen.streak" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1141,6 +1226,57 @@
         }
       }
     },
+    "mainScreen.timeFormat.hoursMinutes" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@h %@m"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@s %@dk"
+          }
+        }
+      }
+    },
+    "mainScreen.timeFormat.hoursOnly" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@h"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@s"
+          }
+        }
+      }
+    },
+    "mainScreen.timeFormat.minutesOnly" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@m"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "%@dk"
+          }
+        }
+      }
+    },
     "mainScreen.tipIcon" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1154,6 +1290,23 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "💡 "
+          }
+        }
+      }
+    },
+    "mainScreen.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sleep Schedule"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uyku Programı"
           }
         }
       }
@@ -1721,6 +1874,7 @@
       }
     },
     "sleepQuality.question %@ %@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -1868,159 +2022,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Uyku programı: %@"
-          }
-        }
-      }
-    },
-    "mainScreen.title" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Sleep Schedule"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Uyku Programı"
-          }
-        }
-      }
-    },
-    "mainScreen.sleepChart.title" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Sleep Chart"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Uyku Grafiği"
-          }
-        }
-      }
-    },
-    "mainScreen.editing.mode" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Editing"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Düzenleme"
-          }
-        }
-      }
-    },
-    "mainScreen.sleepQuality.title" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Rate Your Sleep"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Uykunuzu Değerlendirin"
-          }
-        }
-      }
-    },
-    "mainScreen.sleepQuality.subtitle" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "How was your sleep quality?"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Uyku kaliteniz nasıldı?"
-          }
-        }
-      }
-    },
-    "mainScreen.dailyTip.title" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Daily Tip"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Günlük İpucu"
-          }
-        }
-      }
-    },
-    "mainScreen.timeFormat.hoursMinutes" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "%@h %@m"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "%@s %@dk"
-          }
-        }
-      }
-    },
-    "mainScreen.timeFormat.hoursOnly" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "%@h"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "%@s"
-          }
-        }
-      }
-    },
-    "mainScreen.timeFormat.minutesOnly" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "%@m"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "%@dk"
           }
         }
       }
